# ------------------------------------------------------------------
# tools: big lander (the large nasa lander that comes in multiple
# individual files)
# ------------------------------------------------------------------
add_executable(umeshImportLanderFun3D
  importLanderFun3D.cpp
  )
target_link_libraries(umeshImportLanderFun3D
  umesh
  )


